# pipeline-zero

./: .gitignore  PipelineZero-ContractFlow-Build-Plan-v2.0.docx  PipelineZero-ContractFlow-Build-Plan-v2.0.html  PipelineZero-ContractFlow-Build-Plan-v2.1.docx  README.md  seed_demo.py
contractflow/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
contractflow/backend/app/: main.py
contractflow/backend/app/api/v1/: admin.py  approvals.py  audit.py  auth.py  contracts.py  (+4 more)
contractflow/backend/app/core/: config.py  database.py
contractflow/backend/app/models/: __init__.py  approval_chain.py  approval_step.py  approval_template.py  audit_log.py  base.py  contract.py  contract_version.py  department.py  enums.py  user.py  user_session.py
contractflow/backend/app/schemas/: admin.py  approvals.py  audit.py  auth.py  common.py  contracts.py  versions.py
contractflow/backend/app/services/: audit.py  auth.py  entra.py  policy.py  rate_limit.py
contractflow/backend/app/telemetry/: __init__.py  logging.py  tracing.py
contractflow/backend/app/workers/: expiration.py  notification.py
contractflow/backend/migrations/: env.py
contractflow/backend/migrations/versions/: 20260308_0001_initial.py
contractflow/backend/tests/: conftest.py
contractflow/backend/tests/integration/: conftest.py  test_admin_endpoints.py  test_auth_endpoints.py  test_contract_endpoints.py
contractflow/backend/tests/unit/: test_auth_service.py  test_config.py  test_contract_transitions.py  test_health.py  test_policy.py
(+133 files in other folders)
